# withoutdelay

./: .gitignore  TODO.md
docker/: Dockerfile.poetry
tasker/: go.mod  pipeline.yml  tasker_service.proto
tasker/ci/: task-lint.yml  task-test.yml
temporal/: .gitignore  Dockerfile  Dockerfile.gateway  Makefile  README.md  docker-compose.yml  pipeline.yml  pyproject.toml  service.proto  temporal_service.proto
temporal/ci/: task-lint.yml
temporal/gateway/: go.mod  go.sum  main.go
temporal/protos/: temporal_service.proto
temporal/temporal/: __main__.py  server.py  timex.py
temporal/temporal/ci/: task-lint.yml  task-test.yml
temporal/tests/: test_temporal.py
