[tool.poetry]
name = "temporal"
version = "0.0.1"
description = "Service for tagging temporal expressions and converting them to absolute date times."
authors = ["Nick Spain <nicholas.spain@stileeducation.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.30.0"
google-api = "^0.1.12"
grpcio-tools = "^1.30.0"
googleapis-common-protos = "^1.52.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.5.3"
black = {version = "^19.10b0", allow-prereleases = true}
ipython = "^7.16.1"
grpcio-testing = "^1.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
